src/objects/Integration_Service__mdt.object
<CustomObject>
    <description>This metadata is used to store basic details of an integration service.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Endpoint_URL__c</fullName>
        <inlineHelpText>This field may contain full endpoint URL or partial URL path starting from end of the path defined under named credential.</inlineHelpText>
        <label>Endpoint URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTTP_Method__c</fullName>
        <description>This field reflects the HTTP Method used for sending request.</description>
        <label>HTTP Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GET</fullName>
                    <default>true</default>
                    <label>GET</label>
                </value>
                <value>
                    <fullName>POST</fullName>
                </value>
                <value>
                    <fullName>PUT</fullName>
                </value>
                <value>
                    <fullName>PATCH</fullName>
                </value>
                <value>
                    <fullName>DELETE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration_Direction__c</fullName>
        <description>This field reflects the direction of the integration.</description>
        <inlineHelpText>This field reflects the direction of the integration with respect to this system.</inlineHelpText>
        <label>Integration Direction</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outbound</fullName>
                    <default>true</default>
                    <label>Outbound</label>
                </value>
                <value>
                    <fullName>Inbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Log_Error__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>It denotes whether to maintain log for Error during transaction for this service.</inlineHelpText>
        <label>Log Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Log_Transaction__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>It denotes whether for each transaction of this service need to be logged.</inlineHelpText>
        <label>Log Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Named_Credential_Name__c</fullName>
        <inlineHelpText>Please provide the named credential name if authentication is required for this service.</inlineHelpText>
        <label>Named Credential Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeout_Period__c</fullName>
        <defaultValue>10000</defaultValue>
        <label>Timeout Period (ms)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Integration Service</label>
    <pluralLabel>Integration Services</pluralLabel>
</CustomObject>